# WOG_Module

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  CMakeSettings.json  Folder.DotSettings  LICENSE.md  README.md  SquirrelTemplateConfig.h.in  SymbolicLinkReminder.md  WogConfig.h.in  linux-arm.cmake  linux-arm64.cmake  linux-x64.cmake  linux-x86.cmake  windows-x64.cmake  windows-x86.cmake
dependencies/: CMakeLists.txt
dependencies/cef/: CMakeLists.txt
dependencies/cef/include/: cef_base.h  cef_pack_resources.h  cef_version.h
dependencies/cef/include/base/: cef_template_util.h
dependencies/cef/lib/: libcef.lib
dependencies/hacks/: CMakeLists.txt
dependencies/hacks/include/: Hook.h
dependencies/sqlite3/: CMakeLists.txt
dependencies/sqlite3_orm/: CMakeLists.txt
dependencies/sqrat/: CMakeLists.txt
dependencies/sqrat/include/: sqmodule.h
dependencies/sqrat/include/sqrat/: sqratArray.h  sqratBytecode.h  sqratClass.h  sqratClassType.h  sqratFunction.h  sqratObject.h  sqratScript.h  sqratTable.h  sqratTypes.h  sqratVM.h
dependencies/squirrel/: CMakeLists.txt
dependencies/union/: CMakeLists.txt
dependencies/union/GothicAPI/: zGothicAPI.h
dependencies/union/GothicAPI/Gothic_II_Addon/: G2A.h  G2A_ClassDef.cpp  G2A_GlobalVariables.cpp  G2A_StaticsProperties.cpp
dependencies/union/GothicAPI/Gothic_II_Addon/API/: oAiHuman.h  oAiShoot.h  oAniCtrl.h  oBarrier.h  oBinkPlayer.h  oCollisionObjectMiscChar.h  oCsManager.h  oCsPlayer.h  oCsProps.h  oCsTrigger.h  oDamage.h  oDialog.h  oDoc.h  oDocumentManager.h  oFocus.h  oGame.h  oGameInfo.h  oGameManager.h  oGuilds.h  oHelp.h  oInfo.h  oInformationManager.h  oInventory.h  oItem.h  oItemReact.h  oLogManager.h  oMagFrontier.h  oMagic.h  oMenuSavegame.h  oMenu_Help.h  oMenu_Main.h  oMenu_Status.h  oMission.h  oMobInter.h  oMusicZone.h  oNews.h  oNpc.h  oNpcMessages.h  oNpcStates.h  oObjFactory.h  (+168 more)
dependencies/union/GothicAPI/Gothic_II_Classic/: G2.h  G2_ClassDef.cpp  G2_GlobalVariables.cpp  G2_StaticsProperties.cpp
dependencies/union/GothicAPI/Gothic_II_Classic/API/: oAiHuman.h  oAiShoot.h  oAniCtrl.h  oBarrier.h  oBinkPlayer.h  oCollisionObjectMiscChar.h  oCsManager.h  oCsPlayer.h  oCsProps.h  oCsTrigger.h  oDamage.h  oDialog.h  oDoc.h  oDocumentManager.h  oFocus.h  oGame.h  oGameInfo.h  oGameManager.h  oGuilds.h  oHelp.h  oInfo.h  oInformationManager.h  oInventory.h  oItem.h  oItemReact.h  oLogManager.h  oMagFrontier.h  oMagic.h  oMenuSavegame.h  oMenu_Help.h  oMenu_Main.h  oMenu_Status.h  oMission.h  oMobInter.h  oMusicZone.h  oNews.h  oNpc.h  oNpcMessages.h  oNpcStates.h  oObjFactory.h  (+167 more)
dependencies/union/GothicAPI/Gothic_I_Addon/: G1A.h  G1A_ClassDef.cpp  G1A_GlobalVariables.cpp  G1A_StaticsProperties.cpp
dependencies/union/GothicAPI/Gothic_I_Addon/API/: oAiHuman.h  oAiShoot.h  oAniCtrl.h  oBarrier.h  oBinkPlayer.h  oCollisionObjectMiscChar.h  oCsManager.h  oCsPlayer.h  oCsProps.h  oCsTrigger.h  oDamage.h  oDialog.h  oDoc.h  oDocumentManager.h  oFocus.h  oGame.h  oGameInfo.h  oGameManager.h  oGuilds.h  oHelp.h  oInfo.h  oInformationManager.h  oInventory.h  oItem.h  oItemReact.h  oLogManager.h  oMagFrontier.h  oMagic.h  oMenuSavegame.h  oMenu_Help.h  oMenu_Main.h  oMenu_Status.h  oMission.h  oMobInter.h  oMusicZone.h  oNews.h  oNpc.h  oNpcMessages.h  oNpcStates.h  oObjFactory.h  (+165 more)
dependencies/union/GothicAPI/Gothic_I_Classic/: G1.h  G1_ClassDef.cpp  G1_GlobalVariables.cpp  G1_StaticsProperties.cpp
dependencies/union/GothicAPI/Gothic_I_Classic/API/: oAiHuman.h  oAiShoot.h  oAniCtrl.h  oBarrier.h  oBinkPlayer.h  oCollisionObjectMiscChar.h  oCsManager.h  oCsPlayer.h  oCsProps.h  oCsTrigger.h  oDamage.h  oDialog.h  oDoc.h  oDocumentManager.h  oFocus.h  oGame.h  oGameInfo.h  oGameManager.h  oGuilds.h  oHelp.h  oInfo.h  oInformationManager.h  oInventory.h  oItem.h  oItemReact.h  oLogManager.h  oMagFrontier.h  oMagic.h  oMenuSavegame.h  oMenu_Help.h  oMenu_Main.h  oMenu_Status.h  oMission.h  oMobInter.h  oMusicZone.h  oNews.h  oNpc.h  oNpcMessages.h  oNpcStates.h  oObjFactory.h  (+169 more)
dependencies/union/GothicAPI/Gothic_UserAPI/: zTRndSimpleVertex.inl
launcher/: CCefApp.cpp  CCefApp.h  CMakeLists.txt  CV8Handler.h  VersionInfo.rc.in  main.cpp
src/: pch.h  sqmain.cpp
src/api/: module_api.cpp  module_api.h  squirrel_api.h
src/launcher/: CCefApp.cpp  CCefApp.h  CV8Handler.cpp  main.cpp
src/launcher_shared/: CefMessageFactory.cpp  CefMessageFactory.h  CefValueConverter.cpp  CefValueConverter.h  LauncherEnums.cpp  LauncherEnums.h
src/nonut/: Array.h  Class.cpp  Class.h  Constant.cpp  Constant.h  Function.h  Object.cpp  Object.h  Property.h  Utils.h
src/nonut/core/: Array.cpp  Array.h  Bind.h  Class.cpp  Class.h  Constant.cpp  Constant.h  Function.h  Instance.h  Object.cpp  Object.h  Property.h  StaticClass.cpp  StaticClass.h  StringHelpers.h  Stringify.h  UserData.h  Utils.h
src/nonut/g2o/: ClientConstants.cpp  ClientConstants.h  ClientEventHandlers.cpp  ClientEventHandlers.h  ClientFunctions.cpp  ClientFunctions.h  CustomTypes.cpp  CustomTypes.h  Draw.cpp  Draw.h
src/nonut/g2o/client/: Virt.cpp  Virt.h
src/nonut/g2o/client/class/: Camera.h  Daedalus.h  Draw.cpp  Draw.h  Draw3d.cpp  Draw3d.h  ItemRenderer.cpp  ItemRenderer.h  Line.cpp  Line.h  Line3d.cpp  Line3d.h  Mob.h  MobDoor.h  MobInter.h  MobLockable.h  Packet.cpp  Packet.h  Sky.h  Sound.cpp  Sound.h  Vob.h  (+11 more)
src/nonut/g2o/shared/: CustomTypes.cpp  CustomTypes.h  PacketTypes.h
src/pch/: pch.h
src/scripts/: GenerateClassFromHeader.py
src/wog/: ClientEventHandlers.cpp  ClientEventHandlers.h  Init.h
src/wog/client/: 32bitSurface.cpp  Browser.cpp  Browser.h  Chat.cpp  Chat.h  ClientInit.h  ClientSqMain.cpp  HUD.cpp  HUD.h  InputHandler.cpp  InputHandler.h  Player.cpp  Player.h  Sprint.cpp  Sprint.h  View.cpp  View.h  Virt.cpp  Virt.h  WorldBuilder.cpp  WorldBuilder.h
src/wog/client/gui/: SceneEnum.h
src/wog/client/hooks/: AppWndProc.cpp
src/wog/server/: Chat.cpp  Chat.h  Login.cpp  Login.h  ServerInit.h  ServerSqMain.cpp
src/wog/server/db/: Character.h  Database.cpp  Database.h  User.h
src/wog/shared/: PacketHelper.h  WogHeader.h
(+110 files in other folders)
